# addrsyncd

./: Cargo.toml  README.md  addrsyncd.toml  bench_android.sh  test_android.sh
.cargo/: config.toml
docs/: baseline-android.env  baseline-android.md
src/: app.rs  cli.rs  config.rs  control.rs  error.rs  ip_key.rs  kernel.rs  logger.rs  main.rs
src/daemon/: service.rs
src/daemon/service/: batch_apply.rs  event_loop.rs  lifecycle.rs  resync_cleanup.rs
src/netlink/: addr.rs  cleanup.rs  codec.rs  dump_engine.rs  linux_types.rs  mod.rs  pbr.rs  raw_addr.rs  rule.rs  socket.rs
tests/: cli_tests.rs  daemon_lifecycle_tests.rs
